表記ゆれ修正

--- a/hardproblem/3-01.html
+++ b/hardproblem/3-01.html
@@ -20,7 +20,7 @@
 <div class="text">
 　慌てふためく声が曇天の下に響いた。
 「だ、ダメです希海さん！　離さないでください！」
-　季節は秋。10月もあと数えるほどになったころ。あんなに暑かった夏が過ぎ去り昼間でも長袖が欠かせなくなって、そろそろ木々が赤く色づき出し始めようかというそんな季節。
+　季節は秋。十月もあと数えるほどになったころ。あんなに暑かった夏が過ぎ去り昼間でも長袖が欠かせなくなって、そろそろ木々が赤く色づき出し始めようかというそんな季節。
 「大丈夫だって。何かあったらすぐ支えるから」
 「大丈夫じゃありませんよ！　こけちゃいますって！」
 　おっかなびっくりな様子でペダルを漕ぐリコの自転車を、希海は両手を伸ばして支える。軽量素材が使われているとはいえ、ロボットであるリコは人間よりかなり重い。荷台を掴む希海の手には尋常じゃないほど力が込められており、そろそろ腕が疲れてきたのでいい加減に休みたいというのが正直なところだった。
@@ -28,10 +28,10 @@
 　希海が荷台を支える手を離すと悲鳴がいっそう大きくなった。リコの乗った自転車は、三輪車かと見紛うばかりのスピードでふらふらと蛇行をはじめる。周囲には人影がちらほらといたが、ここ解放記念公園のグラウンドは広大なので誰かとぶつかってしまう心配もない。周辺の施設といえば解放軍の駐屯地と労働党の真浜支部くらいであって、平日のこの時間帯にはほとんど人がいないのだ。希海の大学が近いのが唯一の懸念事項であるが、頭上はこの曇天。いつ一雨来てもおかしくないこの天気なら、いつぞやみたいに知り合いにばったりと出くわすこともないだろう。そう安心できるほどに、希海たちの周囲には人がいなかった。
 「おおーっ。なかなかいい感じよ。その調子その調子！」
 　おぼつかない様子で自転車のハンドルを右へ左へと動かす少女の姿を微笑ましく見守る希海。ふたりが今日、ここへやってきたのは他でもない、新しく買った自転車の練習のためだ。今までは買い物だろうが何だろうが徒歩で済ませてきた希海だったが、最近は何から何までリコにまかせっきりである。自分が何もしていない申し訳なさも手伝って、少しでも日々の雑務が楽になるようにとつい先日、リコに自転車を買ってやったのだ。
-　リコの乗った自転車が危なっかしく方向を変えた。練習を始めてから今日で5日目。相変わらずきゃあきゃあとうるさいが、最初はサドルにまたがることすら怖がっていたリコも徐々に自転車に慣れ始めているようである。希海はしばらくその様子を見守った後、タバコをくわえて火を付けると、適当な場所を見繕って地面に腰を降ろした。
+　リコの乗った自転車が危なっかしく方向を変えた。練習を始めてから今日で五日目。相変わらずきゃあきゃあとうるさいが、最初はサドルにまたがることすら怖がっていたリコも徐々に自転車に慣れ始めているようである。希海はしばらくその様子を見守った後、タバコをくわえて火を付けると、適当な場所を見繕って地面に腰を降ろした。
 「私も、そろそろ頑張らないとな……」
 　つぶやいた言葉は、湿った風に流されてどこかへと消えてしまう。
-　もう時間がないというのに、希海には自分が大学へ行く姿がまったく想像できなかった。ぬるま湯のような弛緩した日常に思考力を奪われているのだろう。希海の大学では2年連続での留年は認められていないのだ。すでに1年間を無為に過ごしてしまった希海に残された時間はあと半年。卒業か退学か。泣いても笑っても半年後には現実を突きつけられる羽目になるというのに、今の希海にはどうしてもその実感が持てずにいた。
+　もう時間がないというのに、希海には自分が大学へ行く姿がまったく想像できなかった。ぬるま湯のような弛緩した日常に思考力を奪われているのだろう。希海の大学では二年連続での留年は認められていないのだ。すでに一年間を無為に過ごしてしまった希海に残された時間はあと半年。卒業か退学か。泣いても笑っても半年後には現実を突きつけられる羽目になるというのに、今の希海にはどうしてもその実感が持てずにいた。
 　タバコの煙が渦を巻いて空へと吸い込まれていく。紫煙が立ち昇る先にあるのは一面灰色の雲。白でも黒でも、快晴でも雨天でもない。何もかもを先送りにしつづけている希海の現状そのものだった。
 「あ」
 　遠くでガシャンという音。少し目を離した間にリコが転倒してしまっていた。希海はタバコを携帯灰皿にねじ込むと、慌てて自転車のそばへと駆け寄る。よほど変なこけ方をしたのか、リコは自転車の下敷きになってしまっていた。
