--- a/hardproblem/3-03.html
+++ b/hardproblem/3-03.html
@@ -14,16 +14,16 @@
 
   <div class="contents">
 <div class="text">
-　SDR近畿事業所の敷地内。
-　サポートセンターのある建物から少し離れた別棟の1Fに、横幅10m奥行き20mほどの部屋がある。壁や天井には吸音・吸光仕様の黒く毛羽立ったフェルトが床や壁に敷き詰められており、窓の類は一切存在しない。ただ、天井のフェルト穴から覗く照明だけが、部屋を照らす唯一の光源だった。
+　ＳＤＲ近畿事業所の敷地内。
+　サポートセンターのある建物から少し離れた別棟の一階に、横幅１０ｍ奥行き２０ｍほどの部屋がある。壁や天井には吸音・吸光仕様の黒く毛羽立ったフェルトが床や壁に敷き詰められており、窓の類は一切存在しない。ただ、天井のフェルト穴から覗く照明だけが、部屋を照らす唯一の光源だった。
 　パジャマに着替えた希海は、財布の中から取り出した一枚のカードをまじまじと眺める。カードの上部には『<span class="simplified">特定精神医疗从事者免许证</span>』の文字。電球色の柔らかな光が、カードにプリントされた顔写真をぼんやりと浮かび上がらせていた。
 　目の下のクマ。卑屈さと尊大さが織り交ざった気難しそうな顔つき。小さい頃からのくせっ毛。カーキ色の制服と真紅の腕章。
-　ため息とともにカードを財布にしまう。この写真を撮ったのは、最後に免許の更新をした高3の頃だったか。服装こそ学校の制服だが、顔つきや髪型・髪の色、化粧のやり方すら当時から何一つ進歩していない。むしろ知識や精神面での退化を考えると、確実に駄目な大人にになっているとすら言えた。
+　ため息とともにカードを財布にしまう。この写真を撮ったのは、最後に免許の更新をした高三の頃だったか。服装こそ学校の制服だが、顔つきや髪型・髪の色、化粧のやり方すら当時から何一つ進歩していない。むしろ知識や精神面での退化を考えると、確実に駄目な大人にになっているとすら言えた。
 「青山さん。着替えは終わりましたか？」
 　ノックの音がした。残響のない乾いた響き。周囲の壁に貼られた防音フェルトのせいで、ルーミング室の扉をノックすれば必然的にこのような軽い音がする。
-　ああ、そういえばこんな音だった。妙な懐かしさを覚えながら開けた扉の先には、白衣を着た男性が立っていた。歳の頃は30代後半といったところだろうか。視界の端に捉えた顔つきはいかにも生真面目で優しそうな感じである。おそらく家ではいい父親なのだろう。希海は何の根拠もなくそう思った。
+　ああ、そういえばこんな音だった。妙な懐かしさを覚えながら開けた扉の先には、白衣を着た男性が立っていた。歳の頃は三十代後半といったところだろうか。視界の端に捉えた顔つきはいかにも生真面目で優しそうな感じである。おそらく家ではいい父親なのだろう。希海は何の根拠もなくそう思った。
 　男は身体検査の結果に異常がなかったことを簡潔に告げると、続いて患者の状況についての説明を始める。
-「今回処置していただくアンドロイドの型番はSUM17M4JP1715。青山さんが購入されたリコちゃんと同じサマリー17シリーズ第4世代ですね。言語も同じ日本語ですが、こちらはリコちゃんと違って男性型です。名前は小春くん」
+「今回処置していただくアンドロイドの型番はSUM17M4JP1715。青山さんが購入されたリコちゃんと同じサマリー１７シリーズ第四世代ですね。言語も同じ日本語ですが、こちらはリコちゃんと違って男性型です。名前は小春くん」
 「…………」
 　いたのか、男性型。
 　希海は喉元まで出かかった素っ頓狂な声を飲み込む。そういえばいつだったか、東がリコのことを「女性型」と言っていた気がする。女性型があるのなら男性型だってあるのだろう。考えてみれば当たり前のことだったが、テレビなどで見かけるアンドロイドが決まって女性型だったせいでその存在がすっぽり頭から抜け落ちてしまっていた。
@@ -36,13 +36,13 @@
 「はい、その失恋です」
 　希海が受けた説明によると、オーナーは<ruby>千霧<rp>《</rp><rt>ちぎり</rt><rp>》</rp></ruby>区にある個人商店の店主で、なかなか後を継ごうとしない息子に代わって店を手伝ってもらおうとアンドロイドを購入したらしい。番頭として彼の仕事を手伝っていた小春は、仕事を通じて一人の女の子と知り合いになった。近くの高校に通う女子生徒で、その店にもよく顔を出す常連だったとのことだ。
 　女の子が来るたびに、小春は嬉しそうに彼女と話をした。彼女が店に訪れたときの小春の喜び方は尋常ではなく、仕事そっちのけで女の子と会話をしていることも多々あったそうである。最初のうちは細かく注意していたオーナーだったが、女の子と楽しそうに話す小春の表情にピンときたらしく、最近では女の子が来ると自分が店番をしていたという。
-「そしてある朝、小春くんは目覚めなくなりました。その前日、夜遅く外出先から帰った小春くんは非常に落ち込んだ様子だったそうです。出掛ける際にはその女子生徒と会ってくると漏らしていたそうなので、おそらく、直接会って思いの丈を伝えたのでしょう。そしてあまり良い振られ方をしなかった。帰りが遅くなったことをきつく叱ったというオーナーの話もありますし、失恋のショックと叱られたショックで精神の抵抗力が落ちていたんでしょうね。個体差はありますが第4世代は精神的にまだ幼いところもありますし、ある意味仕方がないことなのかも知れません」
+「そしてある朝、小春くんは目覚めなくなりました。その前日、夜遅く外出先から帰った小春くんは非常に落ち込んだ様子だったそうです。出掛ける際にはその女子生徒と会ってくると漏らしていたそうなので、おそらく、直接会って思いの丈を伝えたのでしょう。そしてあまり良い振られ方をしなかった。帰りが遅くなったことをきつく叱ったというオーナーの話もありますし、失恋のショックと叱られたショックで精神の抵抗力が落ちていたんでしょうね。個体差はありますが第四世代は精神的にまだ幼いところもありますし、ある意味仕方がないことなのかも知れません」
 　男は目を伏せ小さく息を落とす。
 「以上が我々の把握しているところです。何か質問はありますか」
 　ロボットが恋愛感情を抱くんですか？　そんな疑問が頭に浮かんだが、患者の治療にあまり関係することとは思えない。希海は黙して首を横に振った。
 「そうですか。ではこれを」
 　男が差し出した手には、プラスティックフィルムに包装された数種類の糖衣錠が乗っていた。麻酔薬・精神安定剤・睡眠導入剤など、どれもルーミングに先立って飲まねばならない薬ばかりである。
-「この部屋を出て左へ行った突き当りに給水器とコップが用意してあるので、服用にはそちらをお使いください。ルーミングの開始予定時刻は15時25分ですから、今から飲めばちょうどいい具合でしょう。それとこちら、小春くんに関する資料です。薬が効き始めるまでの間にでもまた目を通しておいてください」
+「この部屋を出て左へ行った突き当りに給水器とコップが用意してあるので、服用にはそちらをお使いください。ルーミングの開始予定時刻は十五時二十五分ですから、今から飲めばちょうどいい具合でしょう。それとこちら、小春くんに関する資料です。薬が効き始めるまでの間にでもまた目を通しておいてください」
 　最後に『頑張ってくださいね』と希海を激励し、男は部屋を後にした。それから数秒と立たぬうちに隣の部屋の人が入った気配がしたので、おそらく患者の方へ行ったのだろう。
 　希海は言われたとおりに薬を飲みに行った。手渡された資料を読みながらスリッパを鳴らして廊下を歩き、元居た部屋へ戻ってくると、先ほどから何度も目にしていたそれが改めて視界に飛び込んでくる。
 　暗幕で囲われたベッドと、その<ruby>傍<rp>《</rp><rt>かたわ</rt><rp>》</rp></ruby>らに鎮座する巨大なグレーの<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>。ロッカーを数段積み上げたような何の飾り気もない外観は、それがただ機能の追求のみを目的として設計されていることを如実に示している。これこそが、患者と作業者の脳を接続するためのルーミングマシンだ。
@@ -53,12 +53,12 @@
 「ま、仕方ないわよね。それもあんたの仕事のうちなんだから」
 　そう。ルーミングマシンがただ機能のみを追求したものであるならば、その無表情にもまた必然的な理由があると言えた。
 　希海はベッドに腰掛けると、マシン横のフックに掛けられていた“筒”を手に取る。高さは中指の長さくらい、厚さは希海の手首くらい、内径は人間の顔より少し小さいくらいの筒状をしたパーツだ。外面からは幾本ものケーブルが伸びており、その全てがルーミングマシンに接続されている。
-　端に付いていた突起を指で押すと、筒が2つに分かれた。希海は慣れた手付きで自らの首に、その筒をはめ込む。突起を押しながらパーツを合わせるとカチッという音とともに再び筒は1つになり、ちょうど首輪のような具合で希海の喉元を覆った。
-　この筒の正体は『ネック<ruby>SQUID<rp>《</rp><rt>スクイド</rt><rp>》</rp></ruby>』と呼ばれるジョセフソン効果を利用した神経信号の読み取り装置である。枕元に置かれているヘッドSQUIDと併せて中枢神経系を駆け巡るニューロンの発火やオルゴン場の波数分布をマッピングし、その信号を選別してルーミングマシンに転送するという代物だ。壁を隔てた隣の部屋では患者が同じ物を装着しており、希海の神経信号が患者の脳へ、患者の神経信号が希海の脳へと伝えられる仕組みである。ヘッドSQUIDを装着し、暗幕を閉め、部屋の電気を消せば準備は完了だ。後は薬が効くのをベッドに寝転がってただ待っていればよい。
+　端に付いていた突起を指で押すと、筒が二つに分かれた。希海は慣れた手付きで自らの首に、その筒をはめ込む。突起を押しながらパーツを合わせるとカチッという音とともに再び筒は一つになり、ちょうど首輪のような具合で希海の喉元を覆った。
+　この筒の正体は『ネック<ruby>ＳＱＵＩＤ<rp>《</rp><rt>ス　ク　イ　ド</rt><rp>》</rp></ruby>』と呼ばれるジョセフソン効果を利用した神経信号の読み取り装置である。枕元に置かれているヘッドＳＱＵＩＤと併せて中枢神経系を駆け巡るニューロンの発火やオルゴン場の波数分布をマッピングし、その信号を選別してルーミングマシンに転送するという代物だ。壁を隔てた隣の部屋では患者が同じ物を装着しており、希海の神経信号が患者の脳へ、患者の神経信号が希海の脳へと伝えられる仕組みである。ヘッドＳＱＵＩＤを装着し、暗幕を閉め、部屋の電気を消せば準備は完了だ。後は薬が効くのをベッドに寝転がってただ待っていればよい。
 　電気を消すと、周囲にはノイズ以外の何も見えなくなる。物音もしない。聞こえるのは心臓の鼓動と耳鳴り、そして息が喉を切る音だけ。壁一面に貼られた吸音・吸光材のせいだ。外界からの刺激はルーミングの妨げになるため、作業者の居る空間は音や光が極力少なくなるように設計されている。ルーミングマシンが“無表情”であるのも、こういった理由からだ。
-　10分ほど経つと、希海の体から次第に感覚が消失しはじめた。足や手が痺れ、皮膚の感覚が失われていく。麻酔薬が効きはじめたらしい。視覚や聴覚だけでなく、触覚・嗅覚・味覚・平衡感覚や体感覚などもルーミングの妨げになりうる。希海が服用した麻酔もこれらの感覚の多くを麻痺させる複合的な薬剤だ。
-　それから更に10分が経った。時計でも眺めていればこの10分という時間の経過は明白なのだが、この段になると、もはや希海の意識からは時間の感覚というものが抜け落ちていた。夢か<ruby>現<rp>《</rp><rt>うつつ</rt><rp>》</rp></ruby>かも分からぬ<ruby>微睡<rp>《</rp><rt>まどろ</rt><rp>》</rp></ruby>みの中を、微小とも無限とも思える時間をかけて往来する。　
-　そして更に10分ほどが経過し、
+　十分ほど経つと、希海の体から次第に感覚が消失しはじめた。足や手が痺れ、皮膚の感覚が失われていく。麻酔薬が効きはじめたらしい。視覚や聴覚だけでなく、触覚・嗅覚・味覚・平衡感覚や体感覚などもルーミングの妨げになりうる。希海が服用した麻酔もこれらの感覚の多くを麻痺させる複合的な薬剤だ。
+　それから更に十分が経った。時計でも眺めていればこの十分という時間の経過は明白なのだが、この段になると、もはや希海の意識からは時間の感覚というものが抜け落ちていた。夢か<ruby>現<rp>《</rp><rt>うつつ</rt><rp>》</rp></ruby>かも分からぬ<ruby>微睡<rp>《</rp><rt>まどろ</rt><rp>》</rp></ruby>みの中を、微小とも無限とも思える時間をかけて往来する。　
+　そして更に十分ほどが経過し、
 
 　光が見えた。
 
@@ -84,7 +84,7 @@
 　今更ながらに自らの服装に気付いた。髪に触れようとした右手が、ごわついた布地に触れる。帽子である。後ろにまわしていた左腕に何かが巻き付いている。腕章である。希海は自身の体を包むカーキ色の衣服をまじまじと見下ろしながら悪態を付いた。
 「何で高校の制服なのよ！」
 　カーキ色の人民服と人民帽。左腕に巻かれた真っ赤な腕章と、そこに記された校名。セーラー服の区立に可愛くないと馬鹿にされ、ブレザーの私立からダサいと見下されてなお、意固地なまでにその革命精神を曲げようとしない、党立高校の進歩的制服である。
-　人民服を着てルーミングをするのが常だった高校時代の名残だろう。習慣というのは怖ろしいものだと希海は思う。高校を卒業して既に4年が経っているというのに、まさかこんな格好でこっちに入ってきてしまうとは。
+　人民服を着てルーミングをするのが常だった高校時代の名残だろう。習慣というのは怖ろしいものだと希海は思う。高校を卒業して既に四年が経っているというのに、まさかこんな格好でこっちに入ってきてしまうとは。
 「…………はぁ」
 　せっかく久しぶりのルーミングが上手くいって上機嫌だったというのに、一気に憂鬱な気分になってしまった。もういっそのこと、このまま帰ってしまおうか。そんな考えすら浮かんでくる始末である。
 　希海はそっと目を閉じた。
@@ -122,7 +122,7 @@
 　空間が歪んだ。
 　小春の叫びに呼応するかのように、希海の頭上の空が引き伸ばされていく。まるで絵の描かれたゴムを引っ張ったときのようだった。<ruby>歪<rp>《</rp><rt>ひずみ</rt><rp>》</rp></ruby>は空模様が判別できないほどに大きくなり、やがて限界まで引き伸ばされたオレンジ色の走査線に裂け目が生じる。
 　希海は反射的にその場から飛び退いた。そして次の瞬間、自らの判断が正しかったことを知る。
-　空の裂け目から、人の頭ほどの大きさの岩が落ちてきた。空間の裂け目は高さにしてマンションの4階分ほど。重力に引かれながら加速する石はそのままアスファルトに叩きつけられ、乾いた音が周囲に響き渡たる。
+　空の裂け目から、人の頭ほどの大きさの岩が落ちてきた。空間の裂け目は高さにしてマンションの四階分ほど。重力に引かれながら加速する石はそのままアスファルトに叩きつけられ、乾いた音が周囲に響き渡たる。
 「ここは僕だけの世界です。夢の中と同じ。何でも自由にできるわけじゃありませんが、このくらいのことはできますよ」
 　冷や汗が背中を伝った。希海は今しがた自分に向かって降ってきた石を横目で窺う。アスファルトにぶつかって真っ二つに割れてしまった断面と、そこに見える灰色の岩肌。一体、この石はどこから現れたのだろう。まさか何もない場所から石を作り出したということはないだろうと希海は推測する。いくら精神空間といえど、浅層における物理法則はおおむね実空間に準拠しているからだ。……とすればこの石はどこからから『持ってきた』ということになる。
 （テレポーテーション……みたいな？　こりゃまたすごいわね）
@@ -134,25 +134,25 @@
 　希海のすぐ上、手を伸ばせば届きそうな位置で、石はぴたりとその動きを止めていた。
 「よっ……と」
 　希海が空き缶を背後に放り投げるような仕草をすると、石はそれに従って後ろへと飛んでいく。石はそのまま誰もいない道路に叩きつけられ、乾いた音が再び住宅街にこだました。
-　過去に閉律症を患った者の中には、その特殊な力を他者の精神空間上においても発揮できる人間が少なからずいる。割合は患者全体の30%ほど。多くは30代前後でその能力を失ってしまうものの、<ruby>虚 想 受 容 性<rp>《</rp><rt>ネガティブ・ケイパビリティ</rt><rp>》</rp></ruby>の高い10代の間は自らの精神空間上とほぼ変わらない形での行使が可能だ。そしてこの体質を用いて患者の精神を閉鎖空間から連れ戻すのが、他ならぬ精神医療従事者の仕事であった。
+　過去に閉律症を患った者の中には、その特殊な力を他者の精神空間上においても発揮できる人間が少なからずいる。割合は患者全体の３０％ほど。多くは三十代前後でその能力を失ってしまうものの、<ruby>虚 想 受 容 性<rp>《</rp><rt>ネガティブ・ケイパビリティ</rt><rp>》</rp></ruby>の高い十代の間は自らの精神空間上とほぼ変わらない形での行使が可能だ。そしてこの体質を用いて患者の精神を閉鎖空間から連れ戻すのが、他ならぬ精神医療従事者の仕事であった。
 「私だってドンパチはやりたくない。だからお願い、落ち着いて」
 　少年の顔に困惑が広がった。だがそれもつかの間、強い決意とわずかな憎しみが、再び虹を閉じ込めた瞳に宿りはじめる。
 　小春に二言はなかった。
-　<ruby>三度<rp>《</rp><rt>みたび</rt><rp>》</rp></ruby>、上空に<ruby>歪<rp>《</rp><rt>ひずみ</rt><rp>》</rp></ruby>が生じはじめる。裂け目は5つ。1つで駄目ならこれでどうだと言わんばかりの数の石が、タイミングもばらばらに希海へと襲いかかる。
-　希海は頭上の石を一瞥し、力の配分を考える。右の小さいのが50、真ん中の大きいのが150、それ以外は100ずつ。反作用を相殺するために地面へ500。ちょうど中空に浮かぶ1000本の<ruby>矢<rp>《</rp><rt>ベクトル</rt><rp>》</rp></ruby>を石ごとに分配するイメージだ。希海が精神空間上で行使できる力とは、手を触れずして物体に力を作用させる能力である。小さいものをいくつも動かすこともできるし、一点に集めれば大きなものだって動かせる。物質によって作用係数が大きく異なるのが玉に傷だが、それ以外は非常に使い勝手のいい優れた特技だと言えた。
+　<ruby>三度<rp>《</rp><rt>みたび</rt><rp>》</rp></ruby>、上空に<ruby>歪<rp>《</rp><rt>ひずみ</rt><rp>》</rp></ruby>が生じはじめる。裂け目は五つ。一つで駄目ならこれでどうだと言わんばかりの数の石が、タイミングもばらばらに希海へと襲いかかる。
+　希海は頭上の石を一瞥し、力の配分を考える。右の小さいのが５０、真ん中の大きいのが１５０、それ以外は１００ずつ。反作用を相殺するために地面へ５００。ちょうど中空に浮かぶ千本の<ruby>矢<rp>《</rp><rt>ベクトル</rt><rp>》</rp></ruby>を石ごとに分配するイメージだ。希海が精神空間上で行使できる力とは、手を触れずして物体に力を作用させる能力である。小さいものをいくつも動かすこともできるし、一点に集めれば大きなものだって動かせる。物質によって作用係数が大きく異なるのが玉に傷だが、それ以外は非常に使い勝手のいい優れた特技だと言えた。
 　希海が全身に力を込めると、石が止まった。
 　だがその直後。押し止めた石のさらに上空で歪みが生じる。今までで一番大きな空間の<ruby>歪<rp>《</rp><rt>ひずみ</rt><rp>》</rp></ruby>。しまった、こっちが本命。希海がそう悟った時には既に人の大きさほどもある岩が姿を現し、希海へと向かって落下を始めていた。
-　落ちてくる岩と今持っている石。その両方を支えることは不可能だ。そう判断した希海は退路を防ぐ目的の4つを、互い違いの方向へと投げて捨てる。まずは前後の2つを前と後に。前に投げる石が小春に当たらないよう、勢い良く投げる。続いて左右の2つを左と右へ。時間が惜しい、無造作に放り投げる。
-　1000のうちの700が空いた。地面に向ける分を除けば、残るは350。希海はそのすべてを頭上へと向ける。鉛直上向きの力が重力による加速度を打ち消し、岩の落下が定速へと近づいていく。
+　落ちてくる岩と今持っている石。その両方を支えることは不可能だ。そう判断した希海は退路を防ぐ目的の四つを、互い違いの方向へと投げて捨てる。まずは前後の二つを前と後に。前に投げる石が小春に当たらないよう、勢い良く投げる。続いて左右の二つを左と右へ。時間が惜しい、無造作に放り投げる。
+　１０００のうちの７００が空いた。地面に向ける分を除けば、残るは３５０。希海はそのすべてを頭上へと向ける。鉛直上向きの力が重力による加速度を打ち消し、岩の落下が定速へと近づいていく。
 （やばっ！　これ無理！）
 　だが、まだ足りない。下向きに踏ん張っているせいで、最初にそうしたように跳んで避けることもできそうにない。かくなる上はもう一つの石を捨てなければ。
-　希海は地面に向けている力のうち150を住宅の石垣に向けると同時に、持ちっぱなしだった石を反対方向へと投げた。民家の壁に石が激突し、窓ガラスが音を立てて砕け散る。
-　これで1000本の矢のすべてが使える。間に合うか。希海は550を上空の岩に、450を地面に向ける。花崗岩相手なら一本の矢が出せる力は約10<ruby>N<rp>《</rp><rt>ニュートン</rt><rp>》</rp></ruby>弱。つまり約100kgの負荷が身体にのしかかる計算だ。だが、もはや構ってはいられない。少しでも多くの力を加え、1秒でも早く岩を止める必要があった。
+　希海は地面に向けている力のうち１５０を住宅の石垣に向けると同時に、持ちっぱなしだった石を反対方向へと投げた。民家の壁に石が激突し、窓ガラスが音を立てて砕け散る。
+　これで千本の矢のすべてが使える。間に合うか。希海は５５０を上空の岩に、４５０を地面に向ける。花崗岩相手なら一本の矢が出せる力は約１０<ruby>Ｎ<rp>《</rp><rt>ニュートン</rt><rp>》</rp></ruby>弱。つまり約１００ｋｇの負荷が身体にのしかかる計算だ。だが、もはや構ってはいられない。少しでも多くの力を加え、一秒でも早く岩を止める必要があった。
 　岩は希海のすぐ頭上。もう腕一本分の距離もない。無理だ。間に合わない。そんなことを考える余裕もなく岩はあっという間に落下し、アスファルトの地面に叩きつけられる直前で、
 　止まった。
 　岩が砕ける音も、頭蓋が潰れる音もない。
 「……っぶないわねえ、もう」
-　道路と岩の間。わずか数十cmほどの隙間から声がする。
+　道路と岩の間。わずか数十センチほどの隙間から声がする。
 　屈みこんだ希海は息を切らしながら、頭上の岩石をゆっくりと持ち上げ背後に投げ捨てた。制服に付いた砂埃をはたき、地面に落ちた人民帽をかぶり直して不遜に笑う。状況が状況だ。その笑顔が幾分引きつっていたとしても致し方ないだろう。
 「さ、次は何？　いい加減諦めた方がいいんじゃない」
 　眼前には呆然とこちらを眺める少年の姿。
