--- a/hardproblem/3-04.html
+++ b/hardproblem/3-04.html
@@ -19,9 +19,9 @@
 「でね、青山さん。ここの家にすっごく人懐っこい猫がいるんですけど……」
 　ここは小春の家の近所が元になって作られている場所らしい。目に留まった風景のひとつひとつを丁寧に説明していく内に、小春はすっかり元気を取り戻してくれたように見えた。
 「あははっ。分かる分かる」
-　けたけたと笑いながら話をする希海。こちらの時間で出会ってからまだ30分ほどしか経っていないが、既に小春とは旧知の仲のように自然に会話ができた。やはり一度喧嘩をした相手には遠慮がなくなるのだろうか。歳の差も手伝って、まるで弟ができたような感覚に陥る。
+　けたけたと笑いながら話をする希海。こちらの時間で出会ってからまだ三十分ほどしか経っていないが、既に小春とは旧知の仲のように自然に会話ができた。やはり一度喧嘩をした相手には遠慮がなくなるのだろうか。歳の差も手伝って、まるで弟ができたような感覚に陥る。
 「昔、学校の近くにトラ猫が住んでてさ。一緒にいた友達二人にはよく<ruby>懐<rp>《</rp><rt>なつ</rt><rp>》</rp></ruby>くんだけど私がなでようとしたら、いつもフゥーッ！ って」
-　そんな風に話を弾ませながらあてもなく歩いていると、やがて開けた場所に出た。片側1車線の小さな国道と、それに並走する線路。フェンスの向こうに大きな海が見える。
+　そんな風に話を弾ませながらあてもなく歩いていると、やがて開けた場所に出た。片側一車線の小さな国道と、それに並走する線路。フェンスの向こうに大きな海が見える。
 　小春が駆け出した。
 　希海も慌てて後を追う。フェンスをよじ登って線路をまたぐ。バラストに足を取られ、つんのめりながら向こう岸のフェンスにしがみつき、小さな網目に靴をねじ込んで再びよじ登る。
 　負けるものか、と希海は思った。スタートダッシュこそ先を許してしまったものの、走るのも登るのも体の大きな希海の方が有利だ。フェンスの頂上に登ると、そのまま身を翻して地面に飛び降りる。
@@ -39,7 +39,7 @@
 「だ、だいたいねぇ――」
 　さらに文句を言おうと口を開いた瞬間、舌の上に、むせ返しそうなほどの甘い味が広がった。
 「あっ……」
-　甘い味は数秒のあいだ口の中にとどまつづけ、現れた時と同じように突如として消えていく。ここではない、外の世界からやってきた知覚。ルーミング終了30分前を告げるシグナルだ。
+　甘い味は数秒のあいだ口の中にとどまつづけ、現れた時と同じように突如として消えていく。ここではない、外の世界からやってきた知覚。ルーミング終了三十分前を告げるシグナルだ。
 「……もう時間ですか？」
 「うん……あともう少しかな」
 　寂しそうな声が漏れる。小春と一緒に街を歩くのは相当に楽しかった。初めこそ些細な争いをしてしまったものの、一度打ち解けてしまえば、そのあとは時間も忘れていろいろな話ができたと思う。
@@ -65,7 +65,7 @@
 　話が通じていない。
 「え？　だ、だって、近所の女の子に告白したんでしょ？　それで振られて、そのショックでこんなところに来ちゃったって……」
 「違いますよ。何言ってるんですか」
-　詳しく話を聞くと、SDRの調査は間違いだったらしい。近所の女の子と仲が良かったのは確かだし、閉律症を患う直前に彼女と会ったことも事実だった。だがその後がでたらめである。
+　詳しく話を聞くと、ＳＤＲの調査は間違いだったらしい。近所の女の子と仲が良かったのは確かだし、閉律症を患う直前に彼女と会ったことも事実だった。だがその後がでたらめである。
 「確かに、あの日その人と話はしましたけど、そんな、告白だなんてしてませんよ僕。一体誰ですか。そんなこと言ったの」
 「…………」
 　死にたくなった。
@@ -83,8 +83,8 @@
 　そういうフォローは要らなかった。いまさら何を言われても、もはや嫌味か皮肉にしか聞こえない。
 「だ、大体、あんたも話が違うなら違うって早めに」
 　ふと気がついた。
-　失恋が閉律症発症の原因だとするSDRの調書が間違いならば、一体どうして小春はワームに感染してしまったのだろう。
-　前日に女の子と会ったという話と、その後落ち込んでいたと言う話は確かなはずだ。オーナーの証言がある。SDRはそこに告白という推測を加えたことによって誤った結論を導きだしてしまったのであって、彼女と会った日に何かしらのアクシデントが起こったという点は、正しいのではないだろうか。
+　失恋が閉律症発症の原因だとするＳＤＲの調書が間違いならば、一体どうして小春はワームに感染してしまったのだろう。
+　前日に女の子と会ったという話と、その後落ち込んでいたと言う話は確かなはずだ。オーナーの証言がある。ＳＤＲはそこに告白という推測を加えたことによって誤った結論を導きだしてしまったのであって、彼女と会った日に何かしらのアクシデントが起こったという点は、正しいのではないだろうか。
 「……その子と何かあったの？」
 　小春が言いにくそうに下を向いた。無理もない。ここから先は、心の奥の柔らかい部分に触れる話だ。本人が話したくないというのなら、触れずにいてやるのが優しさなのかもしれない。
 　沈黙がふたりの間に重くのしかかり、希海を襲う気まずさが時々刻々とその大きを増していく。
@@ -124,7 +124,7 @@
 「しかと見よっ！　私の必殺技っ！」
 　小春に向かって勢いよく投げた。
 　はたからその様子を見ても、ただ石を投げただけのように思えるだろう。何の変哲もない単なる投石だ。
-　だがその石は、空間を漂う数百本の矢によって“押されて”いる。矢の大半は速度と同じ方向で作用し、石に莫大な運動エネルギーを与える。残りの数十本は石を垂直に押し、軌道を調整するためのガイドだ。さながら<ruby>線形加速器<rp>《</rp><rt>ライナック</rt><rp>》</rp></ruby>である。希海の指を離れた石は瞬く間に速度を増し、弾丸と見紛うばかりのスピードで小春の肩口に浮かぶ地球儀を撃ちぬいた。　
+　だがその石は、空間を漂う数百本の矢によって“押されて”いる。矢の大半は速度と同じ方向で作用し、石に莫大な運動エネルギーを与える。残りの数十本は石を垂直に押し、軌道を調整するためのガイドだ。さながら<ruby>線形加速器<rp>《</rp><rt>ラ　イ　ナ　ッ　ク</rt><rp>》</rp></ruby>である。希海の指を離れた石は瞬く間に速度を増し、弾丸と見紛うばかりのスピードで小春の肩口に浮かぶ地球儀を撃ちぬいた。　
 　鉄板を叩いたときのような固く鋭い轟音。
 　地球儀が砕け散った。
 　その破片はまるで雫のように透明で、夕日に照らされミラーボールのようにキラキラと輝いている。
