--- a/hardproblem/3-05.html
+++ b/hardproblem/3-05.html
@@ -76,7 +76,7 @@
 「結局、人間側のエゴなんじゃないですか？」
 　東の言葉を遮って攻撃を続ける。希海の内にくすぶっていた不信の火が、言葉にすることでより一層、その強みを増していく。
 「ロボットが恋愛感情を持っていたほうが喜ぶ人間がいるからじゃないですか？　ネットで見ましたよ。この会社、昔はラブドールを作ってたんですよね。それに今でも関連会社がセクサロイドの生産をしてるって」
-　そして希海は、ひとつの疑いを口にする。かねてよりの疑問。昨日の夕方からずっと続く、東やSDRに対する疑念の、その核心を。
+　そして希海は、ひとつの疑いを口にする。かねてよりの疑問。昨日の夕方からずっと続く、東やＳＤＲに対する疑念の、その核心を。
 
 「リコに性器が付いているのも……そういう理由なんですか」
 
@@ -85,7 +85,7 @@
 　東はやれやれと言わんばかりに小さくため息をつく。
 「これは誠実に答えないと、大変なことになりそうだな」
 　あいも変わらず飄々とした態度が希海の気に障る。またぞろお得意の口先三寸でごまかすつもりなのだろうか。だが、今回ばかりは希海も引く気はない。騙されるものか。明快で納得の行く答えを聞くまで追及の手を緩めてはだめだと自らに言い聞かせる。
-「では事実の確認からしておこうか。まず、SDRがかつて性産業用途のアンドロイドを生産していたこと、および現在も関連会社でその事業を続けていること。これは君の指摘する通り、紛れもない事実だ」
+「では事実の確認からしておこうか。まず、ＳＤＲがかつて性産業用途のアンドロイドを生産していたこと、および現在も関連会社でその事業を続けていること。これは君の指摘する通り、紛れもない事実だ」
 　所詮は誰が書いたのかも分からぬネットの情報だ。ひょっとすると全くのデマか都市伝説なのかもしれない。かすかに残っていたそんな可能性は無情にも棄却され、希海の鼓動がまた少しその速さを増していく。
 「だが君の推測は違う。アンドロイドに恋愛感情を持たせている理由も、リコに性器を実装している理由も、決して物好きな“顧客”のニーズを満たすためではない」
 　それきた。東のやりそうな論法だ。
@@ -97,29 +97,29 @@
 「ふむ……」
 　希海の反論を受けた東は顎に手を当て、しばし黙考をする。
 　いいぞ。相手は答えに窮している。そう思った希海がさらなる追求をしようとしたとき、
-「青山君は、サマリー17シリーズの設計思想をご存知かな？」
+「青山君は、サマリー１７シリーズの設計思想をご存知かな？」
 　東がおもむろに希海の方を向き直った。突然の問いかけに希海は意表を突かれる。
 「話を逸らさないでください」
 「おいおい心外だな。逸らしてなんかいないさ。なぜ我々の作ったアンドロイドが恋愛感情を抱くことができるのか。なぜ性器にいたるまで細部に人間を模しているのか。その答えに繋がることなんだよ」
-　サマリー17シリーズ。リコや小春の正式名称だ。確かふたりとも『第4世代』とか言われていたのだが、その意味合いすら希海は知らない。
-「サマリー17シリーズの設計思想はね……。人間を作ることなんだ」
+　サマリー１７シリーズ。リコや小春の正式名称だ。確かふたりとも『第四世代』とか言われていたのだが、その意味合いすら希海は知らない。
+「サマリー１７シリーズの設計思想はね……。人間を作ることなんだ」
 　詭弁だ。
 　すぐにそう思った。まさか人間を作るのが目的だから性器も付いているし、恋愛感情も理解するとでも言うのだろうか。
 「だ、だからそれは！」
-「まあ最後まで聞きたまえ。サマリー17シリーズの設計思想は人間を作ること。彼らの機能の全てはその目的のために作られたと言っても過言ではない」
+「まあ最後まで聞きたまえ。サマリー１７シリーズの設計思想は人間を作ること。彼らの機能の全てはその目的のために作られたと言っても過言ではない」
 　実際に共に生活している希海には十分すぎるほど分かっていることだが、リコはどこからどう見ても人間そのものだ。だがそれは、あくまで人間とのコミュニケーションを円滑化するための模倣であると思っていた。
 「では人間をゼロから作る上で一番難しい箇所はどこだと思う？」
 「……脳ですか」
-「ご名答。とは言え、脳と非常に近しい動作をするハードウェアの開発は現代でも一応の成功を見ている。ほら、一度話したことがあるだろう？　FIANCがそれだよ。だが難しいのはそこじゃない。一番の問題は、ハードウェアではなくソフトウェアをどう開発するかなんだ」
+「ご名答。とは言え、脳と非常に近しい動作をするハードウェアの開発は現代でも一応の成功を見ている。ほら、一度話したことがあるだろう？　<ruby>ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>がそれだよ。だが難しいのはそこじゃない。一番の問題は、ハードウェアではなくソフトウェアをどう開発するかなんだ」
 　それは希海にも分かる。人間の思考回路や神経伝達をフローチャートにすることが、いかに途方も無いことか。
 「だから我々は育てることにしたんだ。アンドロイドを、文字通り赤ん坊の頃からね。もちろんアンドロイドは機械だ。人間のように成長しない。身体の成長もできることなら実装したいが、技術的にはまったくその目処は立っていないのでね。だからここで言う『育てる』とは精神の育成。つまり学習のことを指す。ここまではいいかな？」
 　ひとしきり話すと東はニヤリと笑う。まるで希海の理解力を試しているかのようだった。
 「ええ大丈夫ですよ。続けてください」
 　何てことはない。つまりリコたちは学習によって知能を獲得したのだ。単にそれだけの話である。それだけなら前にも一度ほのめかされたことがあったので、驚くようなことではない。
-「よし、では本題に移るとしよう。君の疑問、なぜサマリー17シリーズが恋愛感情を理解しうるのか、なぜ彼ら彼女らに人間のそれに準じた性器がついているのか。
+「よし、では本題に移るとしよう。君の疑問、なぜサマリー１７シリーズが恋愛感情を理解しうるのか、なぜ彼ら彼女らに人間のそれに準じた性器がついているのか。
 　その答えはこうだ。人間に準じた身体がなければ人間に準じた心が育めない。つまり、人間の体は、我々が考えている以上に知能と密接な関連性を持っている。人が何かを理解するということは、過去の体験や体感覚との関連付けが行われるということなんだよ。それが言語であれ自転車の乗り方であれね」
 　東はそこまで言うと、席を立ち待合室の隅にあったドリンクサーバーからジュースを汲んで持ってきた。希海の前に一つを置き、自らは席に戻りながら一気に飲み干す。
-「人間は、視覚・嗅覚・聴覚・触覚・味覚といった五感や自らの体験を通じて物事を理解しているのさ。そして、その理解の積み重ねこそが、心の本質……かどうかは分からんが、少なくとも心のある重要な側面を形成していることは間違いない。つまり、機械に人間と同じ心を授けようとするならば、必然的に人と同じような体が必要となってくるんだ。だからサマリー17シリーズには性器が付いている。きちんと使えるものがね。そして恋愛感情だって理解できるし、性欲だってある」
+「人間は、視覚・嗅覚・聴覚・触覚・味覚といった五感や自らの体験を通じて物事を理解しているのさ。そして、その理解の積み重ねこそが、心の本質……かどうかは分からんが、少なくとも心のある重要な側面を形成していることは間違いない。つまり、機械に人間と同じ心を授けようとするならば、必然的に人と同じような体が必要となってくるんだ。だからサマリー１７シリーズには性器が付いている。きちんと使えるものがね。そして恋愛感情だって理解できるし、性欲だってある」
 　希海は、東の置いた紙コップ中身に視線を落とす。中身は白く濁った液体。希海のよく飲むスポーツドリンクだ。意図的か単なる偶然かは分からないが、まるで自分の好みすら見透かされているような気がして希海はそれに手を付けることができなかった。
 「我々が作りたいのは、人間だ。それ以下の単なる機械でもなければ、それ以上の神でもない」
 「……やっぱり答えになってませんよ」
