--- a/hardproblem/3-06.html
+++ b/hardproblem/3-06.html
@@ -19,13 +19,13 @@
 　雨上がりの夜は冷える。地表の放射冷却を遮る雲も、大地を温める太陽もそこにはない。どこまでも黒い夜空に浮かんだ月だけが、このベランダから見える唯一の天体だ。
 　タバコを根本まで吸いきった希海は、吸殻を足元の空きビン投げ入れる。もう何年も前に設置した灰皿だ。部屋でタバコを吸うと管理人に怒られるし、最近はリコもうるさい。
 　窓を開けて自室に戻った。
-　ベランダから見えた街の光よりもずっと明るい白色ダイオードの光が希海を包み込む。時刻は夜の22時。風呂も夕飯もすでに済ませてある。
+　ベランダから見えた街の光よりもずっと明るい白色ダイオードの光が希海を包み込む。時刻は夜の十時。風呂も夕飯もすでに済ませてある。
 「……」
 　部屋の中央に置かれたテーブルの前には、静かに数学の問題を解くリコの姿があった。
 「この問題がよく分かんないんですけど……」
 　希海が戸を閉めるタイミングを見計らって、リコが振り向いた。
 「どれ？」
-「これです。ある楕円が与えられているときに、それに接する傾きが5の直線を求めなさい、っていう」
+「これです。ある楕円が与えられているときに、それに接する傾きが５の直線を求めなさい、っていう」
 「ああ、これね。えっとこの問題は……」
 　隣に腰掛けペンを片手に問題の解き方を説明していく。そんな希海の姿をリコは頷きながら聞いていた。
 「というわけ。分かった？」
