--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -17,10 +17,10 @@
 <div class="text">
 　秋の夜は驚くほどに寒い。
 　それまでが暖かい季節だったせいで、体の感覚が追いついていないからだ。つい数週間前まで半袖で寝ていたのがまるで嘘のように思える。
-　一筋の風が駆け抜け、袖口を通り抜ける空気の冷たさに希海は身震いした。着の身着のままに部屋を飛び出してきたために、上半身を覆うものは下着を除いてTシャツ1枚という有様だ。長袖であるのがせめてもの救いだが、それでもこの気温の中を徘徊するには心もとない。
+　一筋の風が駆け抜け、袖口を通り抜ける空気の冷たさに希海は身震いした。着の身着のままに部屋を飛び出してきたために、上半身を覆うものは下着を除いてＴシャツ一枚という有様だ。長袖であるのがせめてもの救いだが、それでもこの気温の中を徘徊するには心もとない。
 「へっくし！」
 　希海は大きなくしゃみをして鼻をすすった。
-　あれからどれくらい歩いただろうか。感覚としてはかれこれ2時間以上歩いたつもりなのだが、おそらく実際には1時間も経っていないのだろう。夜のニュータウンには本当に何もないからだ。建築制限のために商業施設はほとんど存在せず、唯一の例外である近隣センターは20時に早々とシャッターを降ろしてしまう。ときおり車のエンジン音が響くだけの、静まり返った住宅街。鮮新台をさまよい、中新台をあてもなく歩き、そして気づけば“あの場所”に辿り着いていた。
+　あれからどれくらい歩いただろうか。感覚としてはかれこれ二時間以上歩いたつもりなのだが、おそらく実際には一時間も経っていないのだろう。夜のニュータウンには本当に何もないからだ。建築制限のために商業施設はほとんど存在せず、唯一の例外である近隣センターは午後八時に早々とシャッターを降ろしてしまう。ときおり車のエンジン音が響くだけの、静まり返った住宅街。鮮新台をさまよい、中新台をあてもなく歩き、そして気づけば“あの場所”に辿り着いていた。
 　希海は半ば自嘲気味に、おどり場へと腰を降ろす。段差が高く、間隔は歩幅と合わず、段のひとつひとつが微妙に傾斜している階段の、そのおどり場。あのときリコが立っていた場所だ。考えもせず適当に歩いていたというのに、この階段へ戻ってきてしまったのは何の因果だろう。ここから希海のアパートへはほど近い。秋の夜風に参ってさっさと帰りたいという気持ちの現れか、それとも自分のしてしまったことに対する無意識的な何かか。
 「…………」
 　自分のしてしまったこと。
@@ -63,7 +63,7 @@
 「セクサロイドって知ってる？　人間に体を提供するためのロボット。リコにあれが付いていた理由もひょっとしたら、そういう目的のためなんじゃないかって。もちろん、東さんは違うって言ってたけど――」
 「東さんがですか？」
 　希海は慌てて我に返る。危なかった。この話題は、リコの過去に関する話だ。このまま何も考えずに喋っていては、言ってはいけない話をリコに漏らしてしまう可能性がある。
-「う、うん。SDRではセクサロイドの生産はしてないからって。だからリコの過去のデータがもう残っていなくても、リコがそういう目的のために生産されたわけじゃないことは確かだって」
+「う、うん。ＳＤＲではセクサロイドの生産はしてないからって。だからリコの過去のデータがもう残っていなくても、リコがそういう目的のために生産されたわけじゃないことは確かだって」
 　リコは目線を手元に落とす。その様子は、自らの失われた過去に思いを馳せているようにも見えた。
 「頭では分かってる。リコがそういう目的で作られたわけじゃないっていうことは。でも……。でも、どうしても結びつけて考えちゃうの。リコにあれが付いていた理由は男の人を、オーナーを喜ばせるためなんじゃないかって。そういうことが、リコの過去にはあったんじゃないかって」
 　リコが過去に何をしていたなんて、その詳しいところを希海は知りもしない。希海だってリコに話していない過去の一つや二つを抱えている。相手の過去を知らないのはお互い様だというのに、希海はリコの過去に想像という脚色を加え、暴力的な形でその真偽を確かめようとしたのだ。
@@ -79,7 +79,7 @@
 「それは……」
 　リコたちアンドロイドが作られた理由。東は、人間を作ることが目的だと言っていたけど、おそらくそれはリコの求めている答えではないのだろう。リコが投げかけているのは、なぜ人間の模造品を作ろうと思ったかという、もっと根源的な問いだ。もしも神が、全能の神とやらがこの宇宙の外にいるならば、彼は人を作った理由も上手く説明できるのだろう。だが――
 「……それは、分からない」
-　だが希海は神ならぬ人間だ。ましてや技術者でもなければSDRの社員でもない。そんな希海が、リコの求めている答えなど持ちあわせていようはずもなかった。
+　だが希海は神ならぬ人間だ。ましてや技術者でもなければＳＤＲの社員でもない。そんな希海が、リコの求めている答えなど持ちあわせていようはずもなかった。
 「ふふっ。そうですよね」
 　端から答えなど期待していなかったのだろう。重々しく答える希海を鼓舞するかのように、リコは優しく微笑みかける。
 「どうして人間が私達を作ったのか……その答えは私にも分かりません。でもね、私はこう思うんです。それを知るためにはまず人間を理解しないといけないって。希海さんたち人間のことを理解すれば、いつかきっとその答えが分かるんじゃないかって」
