--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -14,7 +14,7 @@
 
   <div class="contents">
 <div class="text">
-　翌日、近畿市の広域が台風の直撃に見舞われていた。暴風の影響によりモノレールは全線で運転見合わせ。希海とリコはかろうじて動いていた<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>と<ruby>郊鉄<rp>《</rp><rt>KCR</rt><rp>》</rp></ruby>を乗り継ぎ、SDRのサポートセンターへと足を運ぶことにした。
+　翌日、近畿市の広域が台風の直撃に見舞われていた。暴風の影響によりモノレールは全線で運転見合わせ。希海とリコはかろうじて動いていた<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>と<ruby>郊鉄<rp>《</rp><rt>KCR</rt><rp>》</rp></ruby>を乗り継ぎ、ＳＤＲのサポートセンターへと足を運ぶことにした。
 　最寄りである郊鉄の<ruby>暮葉<rp>《</rp><rt>くれは</rt><rp>》</rp></ruby>駅からサポートセンターまでは、いくらか歩かねばならない。普段の天候なら多少面倒くさい思いをするだけですむ距離なのだが、この日は台風である。強風の中、傘を斜めに差して歩くふたりの間に会話はなかった。
 （今日もまた濡れるのか……）
 　傘を用意してきたとは言え、台風の前では焼け石に水である。強風によって斜めに運ばれる雨が、希海のデニムをみるみると湿らせていく。この調子だと帰る頃にはずぶ濡れだろう。昨日みたいに、帰ってすぐ熱い風呂に飛び込もう。そう決意した希海の脳裏に、つい先日の出来事が蘇ってきた。
@@ -71,14 +71,14 @@
 　リコはしどろもどろになりながら、つい数週間前に勉強した生物物理学の内容を説明する。口調こそたどたどしかったものの、その中身は概ね的を射たものであった。
 「はい。その通り。リコも言った通り、オルゴンってのは電磁気力や重力なんかと同じで、この宇宙を形作る基本的な相互作用のひとつなわけね。んで、人に限らず多くの生物の脳はオルゴンで満たされている。ニューロワームっていうのは、このオルゴンを……正確に言うとオルゴンの<ruby>場<rp>《</rp><rt>フィールド</rt><rp>》</rp></ruby>を媒介して、人の脳に寄生する病原体みたいなものなの」
 「病原体……細菌とかですか？」
-「そう。ただ細菌との違いは、実体が無いっていこと。細菌は元をたどれば原子や分子、素粒子の集まりだけど、ニューロワームはそうじゃない。ニューロワームの本体はオルゴン場に刻まれた情報なの。でもそれ以外は細菌をはじめとする微生物と同じ。代謝・自己複製・境界という生物の3要件もしっかりと満たしてるわ」
+「そう。ただ細菌との違いは、実体が無いっていこと。細菌は元をたどれば原子や分子、素粒子の集まりだけど、ニューロワームはそうじゃない。ニューロワームの本体はオルゴン場に刻まれた情報なの。でもそれ以外は細菌をはじめとする微生物と同じ。代謝・自己複製・境界という生物の三要件もしっかりと満たしてるわ」
 「なんだかコンピュータウィルスみたいですね」
 「ご名答。実際にニューロワームっていう名前は、マルウェアのワームから採られてるのよ。<ruby>神経細胞<rp>《</rp><rt>ニューロン</rt><rp>》</rp></ruby>に寄生するワームってとこね」
 「ふふっ。さすが希海さん、色んなこと知ってますね」
 「ま、まあ、一応専門だし……」
 　そう言って、希海は一抹の虚しさを覚えた。この程度の表層的な知識なら、あるレベル以上の教育を受けたものなら誰でも知っている。大学というのは本当に怖ろしいところで、スボトニック型ニューロワームの宿主共生おける突然変異だとか、強磁場中におけるヤング配位則の変化だとか、準粒子を介したオルゴン場と物質の相互作用だとか、そんな途方もなく専門的で高度なことを研究している人間が星の数ほどいるのだ。スーパーで買い物をしている主婦相手ならともかく、大学でこんな知識を得意げに披露したところで失笑を買うだけである。
 「じゃあ、そのニューロワームに感染した人は、どうなるんですか？」
-「色々よ。認知能力に障害が出たり、頭がおかしくなっちゃったり。でもほとんどは閉律症ね。精神が外界から隔絶されて、眠ったままになっちゃうの。これが全体の……えーっと、98%くらいだったかな。ちょっとうろ覚え」
+「色々よ。認知能力に障害が出たり、頭がおかしくなっちゃったり。でもほとんどは閉律症ね。精神が外界から隔絶されて、眠ったままになっちゃうの。これが全体の……えーっと、９８％くらいだったかな。ちょっとうろ覚え」
 「眠ったまま？　起きないんですか？」
 「そ。たまに自分から起きるケースもあるみたいだけど、稀ね」
 「なんだか……おとぎ話みたいですね」
@@ -102,7 +102,7 @@
 　それまで黙っていた希海が不意に声を上げた。急ぎ足でその場を離れようとする東は上半身でふたりを振り返える。
 「何だい。急いでいるんで手短に頼むよ」
 「その患者の子、発症からどれくらいの時間が経ってますか？」
-「今日で3日目だ」
+「今日で三日目だ」
 「ロボットでもニューロワームに感染することがあるんですか？　治療法は一般的に行われているルーミングですよね？」
 　東は質問の意図が読めないようだった。矢継ぎ早に質問を投げつける希海に、不審そうに眉を寄せている。
 「ああ、そうだ。一度話したと思うが、ウチのアンドロイドはプロセッサにオルゴンを利用しているから人間と同じようにワームに感染する。治療法も同じだが、いかんせんロボットなので普通の病院には連れて行けない。だからこうして慌ただしくしているわけさ」
@@ -113,7 +113,7 @@
 「…………何の話だね？」
 「だからルーミングを」
 　東は眉をつり上げた表情で固まっている。
-「私、特定精神医療従事者の免許持ってます。二種ですけど、発症から72時間位内の治療なら問題はありません」
+「私、特定精神医療従事者の免許持ってます。二種ですけど、発症から七十二時間位内の治療なら問題はありません」
 　機械が内的な精神空間を有しているだなんて、にわかに信じがたいことだ。本当にそうなら、この目でそれを見てやろう。ロボットと人がどう違うのか、直接確かめてやろう。そう思った。
 　ふと隣を見ると、リコが不安そうな視線を希海によこしている。虹を閉じ込めた瞳には、好奇心と執念に燃える姿が写っていた。
 </div>
