表記ゆれ修正

--- a/hardproblem/4-02.html
+++ b/hardproblem/4-02.html
@@ -15,7 +15,7 @@
   <div class="contents">
 <div class="text">
 　希海はその頃、自室でテレビ画面に向かって舌打ちをしていた。
-　窓の外はすでに日が落ちかけており、部屋の中はぼんやりと薄暗い。テレビの中では華奢な体躯の少女が大量の兵隊を相手に孤軍奮闘しており、彼女が技名を叫ぶたびに眩しいエフェクトが部屋を明るく照らした。スピーカーから流れる勇ましいがどこか軽薄なBGMと派手な効果音。その二つに紛れて響くカチカチとせわしなくボタンを叩く音。テレビゲームの光に青白く照らされる希海は、まさに不健康を絵に描いたようだった。
+　窓の外はすでに日が落ちかけており、部屋の中はぼんやりと薄暗い。テレビの中では華奢な体躯の少女が大量の兵隊を相手に孤軍奮闘しており、彼女が技名を叫ぶたびに眩しいエフェクトが部屋を明るく照らした。スピーカーから流れる勇ましいがどこか軽薄なＢＧＭと派手な<ruby>効 果 音<rp>《</rp><rt>サウンドエフェクト</rt><rp>》</rp></ruby>。その二つに紛れて響くカチカチとせわしなくボタンを叩く音。テレビゲームの光に青白く照らされる希海は、まさに不健康を絵に描いたようだった。
 「……よっ」
 　希海がコマンドを入力すると、画面の中の少女が空中から全方位へエネルギー弾を放った。周囲の敵はあっけなく一掃されるものの、続く第二陣が雪崩を打って少女に襲いかかる。見るも巨大なハンマーを振り回す大男の集団。さきほどより数は少ないものの、そのタフネスと攻撃力を加味すれば第一陣より難敵であることは明らかだ。大男がハンマーを大きく振り下ろすと大地に衝撃波が走った。少女はそれを横ジャンプで避けると、そのまま空中で進路を変え大男の側面に回りこむ。
 　この動き物理的におかしいんじゃないの。そんな突っ込みが脳裏をかすめたが、希海はすぐに気を引き締めると、精神を集中させコントローラーのボタンをもの凄い速さで叩きだした。
@@ -26,7 +26,7 @@
 「う……、うがあああああああああっ！！」
 　コントローラーを放り投げ、頭を掻きむしった。玄関で靴を脱いでいたリコが何事かと振り返る。
 「ああもう！　やめやめ！」
-　希海はゲーム機の電源を落とすと膝をついて立ち上がり、テレビ横のラックから数本のゲームソフトを取り出す。先月買ったロールプレイングはもう隠しボスまで倒してやることがない。その前に買ったシューティングは何度やっても4面がクリアできない。先週ワゴンセールで買ったシミュレーションは2日で飽きた。
+　希海はゲーム機の電源を落とすと膝をついて立ち上がり、テレビ横のラックから数本のゲームソフトを取り出す。先月買ったロールプレイングはもう隠しボスまで倒してやることがない。その前に買ったシューティングは何度やっても四面がクリアできない。先週ワゴンセールで買ったシミュレーションは二日で飽きた。
 「うーん……どれもパッとしないなあ……」
 「どうしたんですか」
 　電灯のスイッチに手を掛けるリコ。カチッという音に一瞬遅れて、白い光が部屋を明るくする。
@@ -42,8 +42,8 @@
 「…………」
 　こほん、とひとつ咳払い。まあいい。これを機に社会のなんたるかをリコに教えてやろうと希海は思う。
 「えっとねリコさん。……いや、同志リコよ。クリスマスっていうのはね――」
-　そして希海は、リコにクリスマスのなんたるかを切々と説き始めた。曰く、クリスマスとは元々キリスト教圏の風習であって元来仏教国である日本にとっては文化的な異物であり、まして現在この国は<ruby> 唯 物 論 <rp>《</rp><rt>マテリアリズム</rt><rp>》</rp></ruby>を標榜する共産主義国である。つい数十年前まではこんな大々的にクリスマスが祝われることはなかった。ではなぜ短期間でこれほどまでにこの忌まわしき文化が定着したのか。それはひとえに改革開放政策があったからだ。つまりクリスマスとは走資派のお祭りなのである。現に街を見渡してみよ。クリスチャンでもない人間がサンタの格好をして威勢よく商品を売りつけようとしているではないか。この国におけるサンタとは隙あらば人民を搾取しようと企てる資本主義の走狗であり、我々日本人民は今一度建国時の理想に立ち返らなければならない。
-「そしてこのような時代には<ruby> 疫 病 <rp>《</rp><rt>プレイグ</rt><rp>》</rp></ruby>が流行り、<ruby>拝金主義<rp>《</rp><rt>マ　モ　ン</rt><rp>》</rp></ruby>が横行し、<ruby> 芸 術 <rp>《</rp><rt>ミューズ</rt><rp>》</rp></ruby>は衰退するのよ。大体、クリスマスなんて子供とカップルしか楽しめな……、ま、まあこの話はいいとして。とにかく、クリスマスなんかにかまけてちゃダメなの。わかりましたかっ！？」
+　そして希海は、リコにクリスマスのなんたるかを切々と説き始めた。曰く、クリスマスとは元々キリスト教圏の風習であって元来仏教国である日本にとっては文化的な異物であり、まして現在この国は<ruby>唯 物 論<rp>《</rp><rt>マテリアリズム</rt><rp>》</rp></ruby>を標榜する共産主義国である。つい数十年前まではこんな大々的にクリスマスが祝われることはなかった。ではなぜ短期間でこれほどまでにこの忌まわしき文化が定着したのか。それはひとえに改革開放政策があったからだ。つまりクリスマスとは走資派のお祭りなのである。現に街を見渡してみよ。クリスチャンでもない人間がサンタの格好をして威勢よく商品を売りつけようとしているではないか。この国におけるサンタとは隙あらば人民を搾取しようと企てる資本主義の走狗であり、我々日本人民は今一度建国時の理想に立ち返らなければならない。
+「そしてこのような時代には<ruby>疫病<rp>《</rp><rt>プレイグ</rt><rp>》</rp></ruby>が流行り、<ruby>拝金主義<rp>《</rp><rt>マ　モ　ン</rt><rp>》</rp></ruby>が横行し、<ruby>芸術<rp>《</rp><rt>ミューズ</rt><rp>》</rp></ruby>は衰退するのよ。大体、クリスマスなんて子供とカップルしか楽しめな……、ま、まあこの話はいいとして。とにかく、クリスマスなんかにかまけてちゃダメなの。わかりましたかっ！？」
 「えーっ……」
 　リコは全然納得していなかった。頬を膨らましてふてくされる様子は文字通り、クリスマスの中止を告げられた子供のそれだった。
 「えーじゃありません」
@@ -103,7 +103,7 @@
 　そう言うのだった。
 「…………は？」
 「これを買うときに店員さんに『彼氏と使うんですか』って聞かれたんです。それで希海さんのことを少しお話したら……教えてもらえました。そのときはすっごく悩んだんですよ。こういうのを贈って希海さんに変な顔されないかなあって。周りの人に変な目で見られないかなあって。でも、やっぱり買うことにしたんです。だって私が着けたいって思ったんですから」
-　中央地区センターの真ん中、ショッピングセンターの2階部分に設けられた屋外広場。フットサルくらいなら余裕でできそうなその空間と、中央に鎮座する大きなクリスマスツリー。きらびやかな装飾が、イルミネーションの光を受けてきらきらと輝く。
+　中央地区センターの真ん中、ショッピングセンターの二階部分に設けられた屋外広場。フットサルくらいなら余裕でできそうなその空間と、中央に鎮座する大きなクリスマスツリー。きらびやかな装飾が、イルミネーションの光を受けてきらきらと輝く。
 「最初は怖かったんですよ。嫌がられたらどうしよう、って。でも希海さんは何も言わずに着けてくれました。一緒に出掛けてくれました。だから、感謝しています」
 　リコはそう言って微笑みを浮かべる。街の薄明かりに照らされたその笑顔はあまりにも可憐であり、まるでテレビドラマのワンシーンを切り取ったかのようであった。
 　だがそんなリコをよそに、あわよくば会話を誘導してマフラーを外そうと思っていた希海はこう思うのだった。あ、詰んだ、と。
