--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -15,7 +15,7 @@
   <div class="contents">
 <div class="text">
 　中央地区センターを離れて東へ向かった。
-　真揺郊鉄ホテルのロータリーを通りぬけ、近年の建て替えラッシュから取り残されたままの暁新台団地を横目に見送りながら10分も歩けば目的地は見えてくる。地区センターの明かりと喧騒が遠くなるにつれ、希海は落ち着きを取り戻していた。
+　真揺郊鉄ホテルのロータリーを通りぬけ、近年の建て替えラッシュから取り残されたままの暁新台団地を横目に見送りながら十分も歩けば目的地は見えてくる。地区センターの明かりと喧騒が遠くなるにつれ、希海は落ち着きを取り戻していた。
 「……ここ、ですか？」
 　そして辿り着いた目的地。リコが素っ頓狂な声を出すのも無理はない。住宅街の暗がりに沈む真揺中央公園の入り口は、埋め込みポールから伸びるチェーンでふさがれてしまっていた。
 （やっぱり閉まってる……）
@@ -29,7 +29,7 @@
 　小さくジャンプ。足の甲が微かにチェーンに触れ、じゃらりと小さく音をたてる。本来ならこんな低いハードル飛びに引っかかる希海ではなかったが、マフラーを介して繋がっているリコのことを思うと、あまり大げさな動きはできなかった。
 　そして着地。つんのめることも大きな音を立てることもなく、羽毛が落ちるときのように爪先からふわりと地面に降り立つ。チェーンに触れてしまったのは減点対象だが、着地に関しては危なっかしさの全くない綺麗な動きだったと自分でも思う。
 「ほらリコも」
-　そして希海はくるりと振り返るとポケットから手を出し、そのまま<ruby>　掌　<rp>《</rp><rt>たなごころ</rt><rp>》</rp></ruby>を上に向けて差し出した。
+　そして希海はくるりと振り返るとポケットから手を出し、そのまま<ruby>掌<rp>《</rp><rt>たなごころ</rt><rp>》</rp></ruby>を上に向けて差し出した。
 「え、えっと……」
 　リコは不安そうな顔を見せたまま固まってしまった。何かを逡巡している様子が手に取るように分かる。勝手に入っていいのかなとか、おそらくそんなことを考えているのだろう。だがその思案もつかの間、少女はやがて決心したかのように恐る恐るその手を掴むと、希海の真似をするようにゆっくりと膝を持ち上げてみせる。
 「えいっ！」
@@ -51,7 +51,7 @@
 「あ、でも」
 「でも？」
 「すっごく沢山走ったときは熱が出るって聞いたことあります。しょっくあぶそーばー？　が、いんえらすてぃっく？　に切り替わるとか……」
-　希海は顎に手を当て、しばし黙考する。<ruby>衝 撃 吸 収 機 構<rp>《</rp><rt>ショック・アブソーバー</rt><rp>》</rp></ruby>が<ruby>非 弾 性 式<rp>《</rp><rt>インエラスティック</rt><rp>》</rp></ruby>に……つまり運動時の衝撃を熱に変換して体外に捨てる仕組みになるということか。ここから先は全くの想像だが、おそらく普段は回生機構で運動時のエネルギーを回収していて、その方式では大きな衝撃が吸収しきれないのだろう。だから激しい運動をするときに切り替えが行う必要があるのだ。
+　希海は顎に手を当て、しばし黙考する。<ruby>衝撃吸収機構<rp>《</rp><rt>ショック・アブソーバー</rt><rp>》</rp></ruby>が<ruby>非弾性式<rp>《</rp><rt>インエラスティック</rt><rp>》</rp></ruby>に……つまり運動時の衝撃を熱に変換して体外に捨てる仕組みになるということか。ここから先は全くの想像だが、おそらく普段は回生機構で運動時のエネルギーを回収していて、その方式では大きな衝撃が吸収しきれないのだろう。だから激しい運動をするときに切り替えが行う必要があるのだ。
 「じゃあさ、走る？」
 「でも……」
 　リコはそう言って首からぶら下がるマフラーに視線を落とした。
@@ -63,9 +63,9 @@
 「……いいんですか、ってわっ！！」
 　答えを待たずリコの手を引いた。
 「ほらほら！　ぐずぐずしない！」
-　そのまま少し速度を抑えて希海は駆け出す。目指すは高台。振り向くことはしなかったけれど、腕の感覚からリコもおぼつかない足取りで走り出しているのが分かる。肩を上下させながら大地を踏みしめ、顔に突き刺さる冷気をもろともせずに希海は疾走する。そのまま道なりに100mほど進んだ頃には、握った手にうっすらと汗が浮かんでいた。
+　そのまま少し速度を抑えて希海は駆け出す。目指すは高台。振り向くことはしなかったけれど、腕の感覚からリコもおぼつかない足取りで走り出しているのが分かる。肩を上下させながら大地を踏みしめ、顔に突き刺さる冷気をもろともせずに希海は疾走する。そのまま道なりに１００ｍほど進んだ頃には、握った手にうっすらと汗が浮かんでいた。
 「はぁ……はぁ……」
-　暗闇に吸われて消えていくふたり分の呼気とふたり分の足音。周期の異なる4つのクロックがモアレ模様のように重なっては離れ、また重なっては再び離れを繰り返す。ちょうど複数台の車が同時にウィンカーを点滅させたときと同じだ。小さな秩序が絡み合い音間隔の粗密というより大きな構造が形成されていく。
+　暗闇に吸われて消えていくふたり分の呼気とふたり分の足音。周期の異なる四つのクロックがモアレ模様のように重なっては離れ、また重なっては再び離れを繰り返す。ちょうど複数台の車が同時にウィンカーを点滅させたときと同じだ。小さな秩序が絡み合い音間隔の粗密というより大きな構造が形成されていく。
 　後を振り返るとそこには希海の手を掴み、息を切らしながら必死で走る少女の姿。目が合うと、つらそうに眉間に皺を寄せる。
 「大丈夫？　もう少しよ」
 　そんなリコの様子に少しだけ笑みをこぼすと、希海は再び前を向いて眼前にそびえる階段を見据えた。急な斜面を適当に均しただけの、林道などによくある板敷きの階段。正直、難関だ。この手の階段は走って登ることなど想定されていない。
@@ -74,7 +74,7 @@
 「あっ！」
 　最後の一段でリコがつまづいた。つないだ手が地面に向かって引っ張られる。これはまずい。慌てて引っ張り上げようとした希海だったが、いかんせんリコの体重は人間よりもいくらか重く。そんな重いリコを片腕で持ち上げるのは希海には少しばかり荷が重かった。
 　手を引かれる形で、後ろ向きに倒れた。
-　リコからすればとんだ災難だっただろう。地面に向かって顔から飛び込んでしまったばかりか、その上からダメ押しと言わんばかりに希海の背中が降ってきたのだ。ウサギを踏みつぶしたような声を聞いた希海が「あ」と思った瞬間には、全てがもう手遅れである。
+　リコからすればとんだ災難だっただろう。地面に向かって顔から飛び込んでしまったばかりか、その上からダメ押しと言わんばかりに希海の背中が降ってきたのだ。ウサギを踏みつぶしたような声を聞いた希海が『あ』と思った瞬間には、全てがもう手遅れである。
 「ううう……。も、もう希海さんとは絶対に走ってあげませんからね……」
 「あ、あははは……。ごめんごめん。片手で引っ張り上げられるかなーと思ったんだけど……」
 　よろよろと立ち上がった時点でリコはすでに半泣きだった。だが目的の物はもうすぐそこにそびえ立っている。
@@ -123,7 +123,7 @@
 「あ、ちがうんです。まだ何も思い出せてませんよ」
 　慌てて手を振り、否定するリコ。
 「ただ、なんとなく……です。なんとなく……」
-　だがその言葉が、一抹の不安となって希海の中を漂い続ける。リコの中で眠っている記憶はひょっとしたら今にも目覚めてしまうのかもしれない。「なんとなく」という言葉は記憶が蘇りかけていることを示す徴候なのかもしれない。
+　だがその言葉が、一抹の不安となって希海の中を漂い続ける。リコの中で眠っている記憶はひょっとしたら今にも目覚めてしまうのかもしれない。『なんとなく』という言葉は記憶が蘇りかけていることを示す徴候なのかもしれない。
 　まさか。考えすぎだろう。心の中のもう一人の自分が疑義を差し挟んだ。
 　確かに、いささか杞憂が過ぎるのかもしれない。だが、リコの記憶がいつ目覚めるか分かったものではないことは疑いようのない事実であるはずだ。そして記憶が目覚めるその時が、これまで続けてきた自分たちの関係性の変曲点になってしまうのかもしれない。
 「もし……もしだよ？　もしもリコが昔のことを思い出したら……どうする？」
@@ -149,17 +149,17 @@
 　小さく舌打ち。無視しようと思ったが電子音のけたたましい響きは一向に鳴り止まない。この大事なときに一体誰だ。多分、親からだろう。両親というものはいつの時代も『ちゃんとご飯は食べてるか』とか『困ったことはないか』とか、そういう至極抽象的かつ瑣末なことを聞くためだけ突然電話を掛けてくるものなのだ。それは希海にも分かってる。だが今はクリスマス・イブの夜真っ最中である。我が子が自宅に男で連れ込んで情事に励んでる可能性くらい頭に浮かばないのだろうか。心配してくれるのはありがたいが、タイミングというものを考えてほしい。後でかけ直した際にはみっちり注意しておかねば。
 　だが、希海のそんな考えはディスプレイに映しだされた番号を見て雲散霧消してしまう。
 （あれ？　知らない番号だな……）
-　06から始まっているので直轄市内のそう遠くない場所から掛かってきているのは分かるが、肝心の番号にはさっぱり見覚えがなかった。ひょっとして役所とかカード会社とかだろうか。そういえば今月はネットで沢山買い物をしたし、税金とか利用料金の引き落としが上手くいかなかったのかもしれない。仮にそうなら、早めに話を付けておかないと後々面倒くさいことになってしまう。
+　０６から始まっているので直轄市内のそう遠くない場所から掛かってきているのは分かるが、肝心の番号にはさっぱり見覚えがなかった。ひょっとして役所とかカード会社とかだろうか。そういえば今月はネットで沢山買い物をしたし、税金とか利用料金の引き落としが上手くいかなかったのかもしれない。仮にそうなら、早めに話を付けておかないと後々面倒くさいことになってしまう。
 「ごめんリコ、ちょっとまってて」
 　そして希海はリコに背を向け、応答ボタンに手を伸ばした。考えてみれば愚かなことだ。そういう所からの電話であるならば、こんな夜分ではなく、太陽の高い内に掛かってくるのが常だというのに。
 「もしもし」
 「……青山希海さんですか？」
-　スピーカー越しの男性の声には、聞き覚えがなかった。声から察するに年の頃は40代といったところか。丁重な喋り方がどことなく知的な印象を受ける。
+　スピーカー越しの男性の声には、聞き覚えがなかった。声から察するに年の頃は四十代といったところか。丁重な喋り方がどことなく知的な印象を受ける。
 「はい、そうですけど……」
 「真浜大学の高塚です」
 　――！！
 　その名を聞いた瞬間、心臓が冷たくなるのを希海はしっかりと感じた。
-　<ruby>高 塚 靖 友<rp>《</rp><rt>たかつかやすとも</rt><rp>》</rp></ruby>。真浜大学自然科学部の教授であり、希海の指導教官である。フルネームが頭をよぎると同時に、記憶の片隅に眠っていた顔が脳裏に蘇った。
+　<ruby>高塚靖友<rp>《</rp><rt>たかつかやすとも</rt><rp>》</rp></ruby>。真浜大学自然科学部の教授であり、希海の指導教官である。フルネームが頭をよぎると同時に、記憶の片隅に眠っていた顔が脳裏に蘇った。
 「あ、ああ、あの……、え、えっと……」
 　あまりに突然すぎて何を言えば良いかが分からなかった。頭の中が真っ白になる、とは正にこのような状況のためにある言葉なのだろう。言い訳は愚か、電源を切ってそのまま逃げてしまいたいという願望すら浮かんでこない。
 「少し話があります。要件は……分かってますね」
