--- a/hardproblem/4-04.html
+++ b/hardproblem/4-04.html
@@ -15,21 +15,21 @@
   <div class="contents">
 <div class="text">
 　震える脚で大学へ向かった。
-　中央地区センターから真浜大学へは区営バスで約10分。仕事帰りのサラリーマンや遊び終わった若者たちで溢れかえる薄暗い車内。バスが停留所に止まり、人が少なくなるにつれて動悸が大きくなってくる。終点の真浜大本部前に着いた後も、希海はしばらく座席から立ち上がれずにいた。
+　中央地区センターから真浜大学へは区営バスで約十分。仕事帰りのサラリーマンや遊び終わった若者たちで溢れかえる薄暗い車内。バスが停留所に止まり、人が少なくなるにつれて動悸が大きくなってくる。終点の真浜大本部前に着いた後も、希海はしばらく座席から立ち上がれずにいた。
 　運転手に促されバスを出る。足取りがおぼつかずタラップを降りるたびに転けそうになった。切り刻むような北風が身をいっそう強く縮こませるが、希海はその場から動こうとはしなかった。バスのエンジン音が小さくなると、あたりは静寂に包まれる。学外の市道から小さく聞こえてくる車のクラクションと低いうなりを上げるエアコンの室外機。すがるような気持ちで見上げた空には、底のない暗闇と街の光に照らされて銀色に輝く雲が見えた。
 　もう何年も行ってない図書館の横を過ぎ去り、シャッターの降りた購買部を突っ切る。できることならこのままずっとひと気のないキャンパスを歩いていたい。往来のある明るい室内ではなく、この薄暗い場所にいつまでも留まっていたい。目的地が近づくほどに、そんな欲求が頭のなかに湧き上がっては消えていく。だが足を止めれば二度と歩き出せないような気がして、希海はただひたすらに歩き続けるしかなかった。
-　そしてたどり着いた自然科学部棟の建物。7階建ての無骨なコンクリートの塊が闇夜を黒く切り抜く様はまるで空間にぽっかりと穴が空いてしまったかのよう。すでに何度も見てきたはずなのに、今の希海にはそれがまるで地獄か何かの入り口のように思えてならなかった。
+　そしてたどり着いた自然科学部棟の建物。七階建ての無骨なコンクリートの塊が闇夜を黒く切り抜く様はまるで空間にぽっかりと穴が空いてしまったかのよう。すでに何度も見てきたはずなのに、今の希海にはそれがまるで地獄か何かの入り口のように思えてならなかった。
 　希海は正門の前に立つと、慌てたような動作でサイフを取り出した。この時間帯は扉にロックが掛かっている。学生証を読み取り機にかざすとピッという音と共に鍵の外れる音。ノブに伸ばした手が一瞬恐怖で固まるが、希海は息を止めるとそれを一気に押し開けた。
 　希海は回り道をしながら自然科学部棟の廊下を歩いて行く。人とすれ違うたびにうつむき、コートのフードを目深にかぶり直した。顔見知りと出くわすことを考えるとエレベータなど怖くて使えたものではない。非常用の階段を、それも希海の研究室から遠い場所の階段を使って目的の場所へ向かう。普段の倍近い時間を使い、彷徨うように上の階と下の階を何度も何度も行き来しながら、希海はようやく目的のフロアにやってきた。
 （…………）
 　薄暗い階段の出口で立ち止まる。
 　ここから先は、かつて自分がいた場所だ。灰色の床に、蛍光灯と扉が並ぶだけの殺風景な廊下。身を隠せるものはどこにもない。数分の逡巡の後、希海は少しだけ周りの気配を伺うと、目をつむり、蛍光灯の光の下に飛び出た。ぐずぐずしていると、通りかかった誰かと鉢合わせしてしまう。そしてその誰かとは、高確率で自分を知る人間であることは想像に難くなかった。
-　息をすることも忘れ、やってきた廊下の中腹。そこにあるひとつの扉の前で希海は足を止める。扉に掲げられた金属製のプレートには『<span class="simplified">C504 高塚教授室</span>』の文字。体中の鼓動を止めるかのように大きく息を吸い込みノックをした。これでもう引き返せない。自分は今から、2年にも渡る長い怠惰の応報を受けねばならないのだ。耳鳴りの向こうで心臓が馬鹿みたいな音を立てているのがわかる。息苦しさで今にも頭がおかしくなってしまいそうだった。
+　息をすることも忘れ、やってきた廊下の中腹。そこにあるひとつの扉の前で希海は足を止める。扉に掲げられた金属製のプレートには『C504／<span class="simplified">高塚教授室</span>』の文字。体中の鼓動を止めるかのように大きく息を吸い込みノックをした。これでもう引き返せない。自分は今から、二年にも渡る長い怠惰の応報を受けねばならないのだ。耳鳴りの向こうで心臓が馬鹿みたいな音を立てているのがわかる。息苦しさで今にも頭がおかしくなってしまいそうだった。
 「……はい」
-　永遠にも思える沈黙の後、扉の向こうから声があった。希海は『失礼します』と一言付け加え、目をつぶって扉を開け放った。
+　永遠にも思える沈黙の後、扉の向こうから声があった。希海は「失礼します」と一言付け加え、目をつぶって扉を開け放った。
 　そこに居たのは、椅子に腰掛けた一人の壮年の男性。年の頃は四十路前後だと聞いた覚えがある。若さに似合わぬくたびれたシャツと、無造作に切りそろえられた白髪交じりの髪が印象的だが、希海にはどうしてもそれらに目をやることができなかった。
 「久しぶりですね青山さん」
-　教官が口を開いた。どこか淡々とした、2年間の欠席などどこ吹く風といった様子の口調。その穏やかさに、希海の心が少しだけ軽くなる。
+　教官が口を開いた。どこか淡々とした、二年近くに渡る欠席などどこ吹く風といった様子の口調。その穏やかさに、希海の心が少しだけ軽くなる。
 「最近は何をしてたんですか？」
 「あ……え、えっと……すいません。特に何も……」
 「そうですか。長い間連絡がないから、研究室のみんなも心配してましたよ」
@@ -42,7 +42,7 @@
 「君はまだ分かってないのか？」
 　それまで穏やかだった教官の口調に、突如として苛立ちの色が灯った。喉まで出かかっていた希海の言葉は、しゃっくりのように肺の奥へと引っ込んでしまい、少し遅れて心臓が凍りついてゆく。
 「あ、えっ…………えっと」
-「あなたはこの一年間、いや二年間、一体何をしてきたんですか？　資格の取得とか、ボランティアとか、別の大学で講義を受講していたとか、そういうのがあなたにありますか？　何も無いでしょう。そんな人間をおいそれと卒業させることはできません。あなたが無為に過ごしてきたこの2年間に、他の人がどれだけ努力をしてきたか、本当に理解していますか？　していませんよね。本当にそのことを理解しているのなら、そんな呑気に『心を入れ替えて』なんて言えないはずです」
+「あなたはこの一年間、いや二年間、一体何をしてきたんですか？　資格の取得とか、ボランティアとか、別の大学で講義を受講していたとか、そういうのがあなたにありますか？　何も無いでしょう。そんな人間をおいそれと卒業させることはできません。あなたが無為に過ごしてきたこの二年間に、他の人がどれだけ努力をしてきたか、本当に理解していますか？　していませんよね。本当にそのことを理解しているのなら、そんな呑気に『心を入れ替えて』なんて言えないはずです」
 　突然降って湧いたような、だがある意味で必然とも言える教官の葉。矢で射られたような激痛が希海の中心を駆け抜け、体から力が抜けていく。しかし教官はそんな希海にさらなる追い打ちの言葉を投げかけるのであった。
 「……いえ。もういいです。どの道あなたはもう手遅れだ。私ができることは何もありません。最後の数ヶ月にふっと現れて申し訳程度の研究をするだけの人に単位を授けるなんて、他のまじめに頑張っている人が可哀想ですからね」
 「あ、そ、それって」
@@ -50,7 +50,7 @@
 　希海はそれ以上何も言うことができず、教官は何ひとつ答えない。その沈黙がすべてを物語っていた。
 「……どうしようもないですね。これは因果応報です。ですが、今すぐにあなたを研究室から追い出すことが最良かというと、私はそうは思わない。指導教官としての責任というものがあります」
 　教官はそう言って、興味を失くしたように手元の資料に目を落とした。
-「明日から毎日、朝9時に来てください。もちろん休日もです。取り返しが付かないこととは言え、少しでもあなたに研究活動をしてもらうのが大学としての責任です。具体的な研究テーマは他の研究員と相談して決めておきます。いいですか、明日からの数ヶ月間、一日も休まずに大学へ来てください。わかりましたね」
+「明日から毎日、朝九時に来てください。もちろん休日もです。取り返しが付かないこととは言え、少しでもあなたに研究活動をしてもらうのが大学としての責任です。具体的な研究テーマは他の研究員と相談して決めておきます。いいですか、明日からの数ヶ月間、一日も休まずに大学へ来てください。わかりましたね」
 　視界が回る。思考が止まる。足が震える。心に<ruby>靄<rp>《</rp><rt>もや</rt><rp>》</rp></ruby>がかかる。鼻が詰まり、目頭に熱いものがこみ上げてくる。希海はその場に立ち尽くし、ただ、突きつけられた事実を必死に咀嚼することしかできない。
 （嘘……でしょ……）
 　希海は何も言わずに頭を下げると、そのまま緩慢な動作で部屋の外へ出た。なるべく音を立てないように教授室の扉を閉めると、必死にこらえていた涙で視界が歪んでいく。
@@ -66,7 +66,7 @@
 　それは多分間違いのないことだ。自分は病気でもなんでもない。大学へ行こうという意思があれば、脳がそのシグナルを筋肉に送ってやれば、体はちゃんと動いたはずだ。布団から出られずに惰眠を貪ってしまったことも、休みが続いて行こうとすら思えなくなったことも、すべては意思の力でねじ伏せられたのかもしれないし、それこそが自分の負い目に他ならないことは自明だった。
 （じゃあ……）
 　じゃあ一体どうすれば、その意志というものを持つことができたのだろう。一体何が原因で、自分はこんな人間になってしまったのだろう。幼少期の教育？　生活環境？　それとも単なる遺伝？　あるいは何の意味もない偶然――いや、教育にせよ環境にせよ遺伝にせよ、自分の手の届かない部分で既に決まってしまっているという意味において、それらはすべて偶然性の賜物だ。
-　考えてみれば当たり前の話だった。すべての事象には原因があるのだ。疑問を持つことを知った子供のように「どうして？」を繰り返し物事の原因を辿っていくと、いつかは自分の操作しえない領域に飛び出てしまう。自分の意志で大学へ行けなかったのも、いつの間にか臆病が板についてしまったのも、小さい頃からのくせっ毛も、みんなそう。そしてその因果の玉突きをどこまでも遡った先にあるものは、宇宙の誕生でしかない。
+　考えてみれば当たり前の話だった。すべての事象には原因があるのだ。疑問を持つことを知った子供のように『どうして？』を繰り返し物事の原因を辿っていくと、いつかは自分の操作しえない領域に飛び出てしまう。自分の意志で大学へ行けなかったのも、いつの間にか臆病が板についてしまったのも、小さい頃からのくせっ毛も、みんなそう。そしてその因果の玉突きをどこまでも遡った先にあるものは、宇宙の誕生でしかない。
 （なんだ結局……）
 　結局、どうしようもないのだ。自分は、この世界を支配する自然の法則に、宇宙が火の玉だった頃から連綿と続く因果の玉突きに翻弄されるだけの、ちっぽけな存在でしかないのだ。
 （でも……だったらどうして……）
