一部表現の修正

--- a/hardproblem/4-06.html
+++ b/hardproblem/4-06.html
@@ -15,7 +15,7 @@
   <div class="contents">
 <div class="text">
 　太陽が登る。
-　暴力的な明るさで世界を照らしだす光が闇のベールを暴き、弱さや悲しみを包み込む夜の静寂を一掃しはじめる。ここから先は光の時間だ。弱さも悲しみも、すべてを自らの内に閉じ込めてただひたすらに日々の雑務をこなさなければならない光の時間。
+　暴力的な明るさで世界を照らしだす光が闇のベールを暴き、弱さや悲しみを包み込む夜の静寂を一掃しはじめる。ここから先は光の時間だ。弱さも悲しみも、すべてを自らの内に閉じ込めてただひたすらに日々の生業をこなさなければならない光の時間。
 「ん……」
 　カーテン越しの日差しに希海は目を覚ました。本来ならばこんな早い時間に目覚める人間ではなかったが、ここ数日は昼過ぎまで寝ている生活が続いていたのだ。そんな人間が日付の変わる前に就寝したところで、しっかりと眠れるわけがなかった。それに今日からは……。
 　けだるさの残る体を起こして目をこする。いつもなら先に起きているはずのリコも今日はまだ眠ったままだ。
